--- a/task-manager/server/.env
+++ b/task-manager/server/.env
@@ -1,3 +1,5 @@
 JWT_SECRET=your_secret_key
 MONGODB_URI=mongodb://localhost:27017/task-manager
 PORT=5000
+EMAIL_USER=jgondwe59@@gmail.com
+EMAIL_PASS=vzhx iboa lhjn tkzz
