--- a/task-manager/server/package.json
+++ b/task-manager/server/package.json
@@ -1,15 +1,15 @@
 {
     "name": "task-manager-server",
     "dependencies": {
-      "express": "^4.18.2",
-      "mongoose": "^7.0.0",
-      "bcryptjs": "^2.4.3",
-      "jsonwebtoken": "^9.0.0",
-      "cors": "^2.8.5",
-      "dotenv": "^16.0.3"
+        "bcryptjs": "^2.4.3",
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.3",
+        "express": "^4.18.2",
+        "jsonwebtoken": "^9.0.0",
+        "mongoose": "^7.0.0",
+        "nodemailer": "^6.10.0"
     },
     "scripts": {
-      "start": "node server.js"
+        "start": "node server.js"
     }
-
-  }
+}
